refactored and optimized code