@@ -1,6 +1,7 @@
 package com.provedcode.kudos.service;
 
 import com.provedcode.kudos.model.entity.Kudos;
+import com.provedcode.kudos.model.request.SetAmountKudos;
 import com.provedcode.kudos.model.response.KudosAmount;
 import com.provedcode.kudos.model.response.KudosAmountWithSponsor;
 import com.provedcode.kudos.repository.KudosRepository;
@@ -8,6 +9,7 @@ import com.provedcode.sponsor.mapper.SponsorMapper;
 import com.provedcode.sponsor.model.dto.SponsorDTO;
 import com.provedcode.sponsor.model.entity.Sponsor;
 import com.provedcode.sponsor.repository.SponsorRepository;
+import com.provedcode.talent.model.ProofStatus;
 import com.provedcode.talent.model.entity.Talent;
 import com.provedcode.talent.model.entity.TalentProof;
 import com.provedcode.talent.repo.TalentProofRepository;
@@ -22,6 +24,7 @@ import org.springframework.web.server.ResponseStatusException;
 
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import static org.springframework.http.HttpStatus.*;
@@ -37,77 +40,93 @@ public class KudosService {
     TalentRepository talentRepository;
     SponsorMapper sponsorMapper;
 
-
-    public void addKudosToProof(long id, Long amount, Authentication authentication) {
-        UserInfo userInfo = userInfoRepository.findByLogin(authentication.getName())
-                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND,
-                        "Sponsor with id = %s not found".formatted(id)));
+    public void addKudosToProof(long proofId, Optional<SetAmountKudos> setAmountKudos, Authentication authentication) {
+        String login = authentication.getName();
+        UserInfo userInfo = userInfoRepository.findByLogin(login)
+                                              .orElseThrow(() -> new ResponseStatusException(NOT_FOUND,
+                                                                                             "User with login = %s not found".formatted(
+                                                                                                     login)));
         Sponsor sponsor = sponsorRepository.findById(userInfo.getSponsor().getId()).orElseThrow(
                 () -> new ResponseStatusException(NOT_FOUND,
-                        String.format("sponsor with id = %d not found", id)));
-        TalentProof talentProof = talentProofRepository.findById(id)
-                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND, "Proof with id = %s not found".formatted(id)));
-        if (sponsor.getAmountKudos() < amount) {
+                                                  "Sponsor with login = %s not found".formatted(login)));
+        TalentProof talentProof = talentProofRepository.findById(proofId)
+                                                       .orElseThrow(() -> new ResponseStatusException(NOT_FOUND,
+                                                                                                      "Proof with id = %d not found".formatted(
+                                                                                                              proofId)));
+
+        if (kudosRepository.existsBySponsorIdAndProofId(sponsor.getId(), talentProof.getId()))
+            throw new ResponseStatusException(FORBIDDEN, "The sponsor has already set kudos to this proof");
+        if (!talentProof.getStatus().equals(ProofStatus.PUBLISHED))
+            throw new ResponseStatusException(FORBIDDEN, "Proof that was kudosed does not have the PUBLISHED status");
+
+        long obtainedAmount = setAmountKudos.orElse(new SetAmountKudos(1L)).amount();
+        if (sponsor.getAmountKudos() < obtainedAmount) {
             throw new ResponseStatusException(FORBIDDEN, "The sponsor cannot give more kudos than he has");
         }
-        if (amount <= 0) {
-            throw new ResponseStatusException(BAD_REQUEST, "amount of kudos must be greater than 0");
-        }
-        sponsor.setAmountKudos(sponsor.getAmountKudos() - amount);
+        sponsor.setAmountKudos(sponsor.getAmountKudos() - obtainedAmount);
         kudosRepository.save(Kudos.builder()
-                .amountKudos(amount)
-                .proof(talentProof)
-                .sponsor(sponsor)
-                .build());
+                                  .amount(obtainedAmount)
+                                  .proof(talentProof)
+                                  .sponsor(sponsor)
+                                  .build());
     }
 
     @Transactional(readOnly = true)
-    public KudosAmount getKudosForSponsor(long id, Authentication authentication) {
-        UserInfo userInfo = userInfoRepository.findByLogin(authentication.getName())
-                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND,
-                        "Sponsor with id = %s not found".formatted(id)));
-        Sponsor sponsor = sponsorRepository.findById(userInfo.getSponsor().getId()).orElseThrow(
-                () -> new ResponseStatusException(NOT_FOUND,
-                        String.format("Sponsor with id = %d not found", id)));
-        if (!sponsor.getId().equals(userInfo.getSponsor().getId())) {
+    public KudosAmount getKudosForSponsor(long sponsorId, Authentication authentication) {
+        String login = authentication.getName();
+        UserInfo userInfo = userInfoRepository.findByLogin(login)
+                                              .orElseThrow(() -> new ResponseStatusException(NOT_FOUND,
+                                                                                             "User with login = %s not found".formatted(
+                                                                                                     login)));
+        if (!userInfo.getSponsor().getId().equals(sponsorId)) {
             throw new ResponseStatusException(FORBIDDEN, "Only the account owner can view the number of kudos");
         }
+        Sponsor sponsor = sponsorRepository.findById(sponsorId).orElseThrow(
+                () -> new ResponseStatusException(NOT_FOUND,
+                                                  String.format("Sponsor with id = %d not found", sponsorId)));
         return new KudosAmount(sponsor.getAmountKudos());
     }
 
     @Transactional(readOnly = true)
-    public KudosAmountWithSponsor getProofKudos(long id, Authentication authentication) {
-        UserInfo userInfo = userInfoRepository.findByLogin(authentication.getName())
-                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND,
-                        "Sponsor with id = %s not found".formatted(id)));
+    public KudosAmountWithSponsor getProofKudos(long proofId, Authentication authentication) {
+        String login = authentication.getName();
+        UserInfo userInfo = userInfoRepository.findByLogin(login)
+                                              .orElseThrow(() -> new ResponseStatusException(NOT_FOUND,
+                                                                                             "User with login = %s not found".formatted(
+                                                                                                     login)));
         Talent talent = talentRepository.findById(userInfo.getId())
-                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND,
-                        "Talent with id = %s not found".formatted(id)));
-        TalentProof talentProof = talentProofRepository.findById(id)
-                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND,
-                        "Proof with id = %s not found".formatted(id)));
+                                        .orElseThrow(() -> new ResponseStatusException(NOT_FOUND,
+                                                                                       "Talent with login = %s not found".formatted(
+                                                                                               login)));
+        TalentProof talentProof = talentProofRepository.findById(proofId)
+                                                       .orElseThrow(() -> new ResponseStatusException(NOT_FOUND,
+                                                                                                      "Proof with id = %s not found".formatted(
+                                                                                                              proofId)));
 
         Long countOfAllKudos = talentProof.getKudos().stream()
-                .map(Kudos::getAmountKudos)
-                .reduce(0L, (prev, next) -> prev + next);
+                                          .map(Kudos::getAmount)
+                                          .reduce(0L, (prev, next) -> prev + next);
 
         if (talent.getId().equals(talentProof.getTalent().getId())) {
             Map<Long, SponsorDTO> kudosFromSponsor = talentProof.getKudos().stream()
-                    .collect(Collectors.toMap(
-                            Kudos::getAmountKudos,
-                            proof -> proof.getSponsor() != null ? sponsorMapper.toDto(proof.getSponsor()) : SponsorDTO.builder().build(),
-                            (prev, next) -> next,
-                            HashMap::new
-                    ));
+                                                                .collect(Collectors.toMap(
+                                                                        Kudos::getAmount,
+                                                                        proof -> proof.getSponsor() != null
+                                                                                 ? sponsorMapper.toDto(
+                                                                                proof.getSponsor())
+                                                                                 : SponsorDTO.builder().build(),
+                                                                        (prev, next) -> next,
+                                                                        HashMap::new
+                                                                ));
 
             return KudosAmountWithSponsor.builder()
-                    .allKudosOnProof(countOfAllKudos)
-                    .kudosFromSponsor(kudosFromSponsor)
-                    .build();
+                                         .allKudosOnProof(countOfAllKudos)
+                                         .kudosFromSponsor(kudosFromSponsor)
+                                         .build();
         } else {
             return KudosAmountWithSponsor.builder()
-                    .allKudosOnProof(countOfAllKudos)
-                    .kudosFromSponsor(null).build();
+                                         .allKudosOnProof(countOfAllKudos)
+                                         .kudosFromSponsor(null).build();
         }
     }
 }
